# effective_python

./: lab01.ipynb  lab02.ipynb  lab03.ipynb  lab04.ipynb  lab05.ipynb  lab06.ipynb  lab07.ipynb  lab11.ipynb  lab12.ipynb  opt02.ipynb  part02.ipynb  part03.ipynb  part04.ipynb  part07.ipynb  pyproject.toml  test.json
lab06_files/: bagofwords.txt  plik.txt
lab07_files/: 04.py  hamlet.txt  newton.py  pickle.lol
lab10/mysite/: db.sqlite3
lab10/mysite/mysite/: settings.py  urls.py
lab10/mysite/notes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
lab10/mysite/notes/migrations/: 0001_initial.py  0002_note_user_delete_notatka_note_created_by.py  0003_topic_alter_note_options_remove_note_created_at_and_more.py  0004_topic_level_topic_lft_topic_parent_topic_public_and_more.py
lab10/mysite/notes/templates/: add_note.html  add_topic.html  registration.html  show_note.html  show_topic.html  topic_list.html  update_note.html  update_topic.html
presentation/: Prezentacja bez tytułu.pptx  marshmallow-presentation.py  marshmallow.ipynb  package-invalid.json
