[tool.poetry]
name = "effective_python"
version = "0.1.0"
description = ""
authors = ["Krzysztof Misztal"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
django-mptt-admin = "^2.5.1"
django-extensions = "^3.2.3"
jupyter = "^1.0.0"
rise = "^5.7.1"
django = "^4.2.7"
marshmallow = "^3.20.2"
marshmallow-dataclass = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
